# WhipseeySaveManager

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.MD  WhipseeySaveManager.au3  WhipseeySaveManager.code-workspace  WhipseeySaveManager.isn  build.rs
Forms/: GUI.isf
inc/: core.hpp  data.hpp  error.hpp  filecontroldata.hpp  gui-impl-about.hpp  gui-impl-cheats.hpp  gui-impl-common.hpp  gui-impl-files.hpp  gui-impl-options.hpp  gui.hpp  ini.hpp  system.hpp  testhelper.hpp  types.hpp  validation.hpp
src/: CMakeLists.txt  VERSIONINFO.rc  WhipseeySaveManager.cpp  data.cpp  data.rs  error.cpp  filecontroldata.cpp  gui-impl-cheats.cpp  gui-impl-common.cpp  gui-impl-files.cpp  gui-impl-options.cpp  gui.cpp  gui.rs  ini.cpp  lib.rs  main.rs  system.cpp  util.rs
src/data/: cheats.rs  file.rs  options.rs
src/gui/: about.rs  cheats.rs  file.rs  file_select.rs  files.rs  options.rs  theme.rs
src/system/: file.rs
src/util/: error.rs  file.rs  test.rs
src/util/test/: default.ini  invalid-keys.ini  invalid-sections.ini  invalid-value-ranges.ini  invalid-value-types.ini  lenient-values.ini  valid.ini
test/: .clang-tidy  CMakeLists.txt  data-test.cpp  ini-test-b.cpp  ini-test.cpp  system-test.cpp  testhelper.cpp  testmain.cpp  types-test.cpp
test/data/: file-missing-bossnodamage.ini  options-default.ini  options-invalid.ini  options-missing-key.ini  options-missing-section.ini  options-valid.ini  settings-default.ini  settings-invalid.ini  settings-missing-key.ini  settings-missing-section.ini  settings-missing.ini  settings-valid.ini
