[package]
name = "WhipseeySaveManager"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }
iced_aw = "0.9.3"
steamlocate = "2.0.0-beta.2"
rust-ini = "0.21.0"
opener = "0.7.1"
rfd = "0.14.1"
num_enum = "0.7.3"
tokio = { version = "1.39.2", features = ["fs"] }
thiserror = "1.0.63"
enumflags2 = { version = "0.7.10", features = ["std"] }
