[package]
name = "WhipseeySaveManager"
description = "GUI for modifying most Values in Whipseey Savegames"
version = "0.12.0-dev"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "whipseey_save_manager"
doctest = true

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }
iced_aw = { git = "https://github.com/StillGreen-san/forked_iced_aw", branch = "0.9.3-additional-fixes" }
steamlocate = "2.0.0-beta.2"
rust-ini = "0.21.1"
opener = "0.7.2"
rfd = "0.14.1"
num_enum = "0.7.3"
tokio = { version = "1.39.3", features = ["fs", "macros"] }
thiserror = "1.0.63"
strum = { version = "0.26.3", features = ["derive"] }
num = "0.4.3"
dark-light = "1.1.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
