[package]
name = "WhipseeySaveManager"
description = "GUI for modifying most Values in Whipseey Savegames"
version = "0.12.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "whipseey_save_manager"
doctest = true

[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio"] }
iced_aw = { version = "0.11.0", features = ["card", "number_input", "tabs"] }
steamlocate = "2.0.0-beta.2"
rust-ini = "0.21.1"
opener = "0.7.2"
rfd = "0.15.0"
num_enum = "0.7.3"
tokio = { version = "1.40.0", features = ["fs", "macros"] }
thiserror = "1.0.63"
strum = { version = "0.26.3", features = ["derive"] }
num = "0.4.3"
const_format = "0.2.33"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = "fat"
opt-level = "z"
codegen-units = 1
